--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,18 @@
   <head>
     <title>ToDoListUpdate</title>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <%= yield %>
+    <h1 class='center'>My To Do Lists</h1>
+      <nav class='center'>
+        <%= link_to 'New List', new_list_path(@list)%>
+      </nav>
+  <%= yield %>
+  <hr />
+    <footer class='center'>
+      <a href='/'>Home</a>
+    </footer>
   </body>
 </html>
